--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ _openmp_mutex=5.1=1_gnu
 asttokens=2.4.1=pyhd8ed1ab_0
 backcall=0.2.0=pyh9f0ad1d_0
 blas=1.0=mkl
+bottleneck=1.3.7=py38ha9d4c09_0
 bzip2=1.0.8=h7b6447c_0
-ca-certificates=2024.2.2=hbcca054_0
-certifi=2024.2.2=pyhd8ed1ab_0
+ca-certificates=2023.12.12=h06a4308_0
+certifi=2024.2.2=py38h06a4308_0
 charset-normalizer=2.0.4=pyhd3eb1b0_0
 comm=0.2.1=pyhd8ed1ab_0
 cuda-cudart=12.1.105=0
@@ -21,6 +22,7 @@ cuda-runtime=12.1.0=0
 cycler=0.11.0=pyhd3eb1b0_0
 debugpy=1.6.7=py38h6a678d5_0
 decorator=5.1.1=pyhd8ed1ab_0
+docopt=0.6.2=pypi_0
 executing=2.0.1=pyhd8ed1ab_0
 ffmpeg=4.3=hf484d3e_0
 filelock=3.13.1=py38h06a4308_0
@@ -85,12 +87,14 @@ ncurses=6.4=h6a678d5_0
 nest-asyncio=1.6.0=pyhd8ed1ab_0
 nettle=3.7.3=hbbd107a_1
 networkx=3.1=py38h06a4308_0
+numexpr=2.8.4=py38hc78ab66_1
 numpy=1.24.3=py38hf6e8229_1
 numpy-base=1.24.3=py38h060ed82_1
 openh264=2.1.1=h4ff587b_0
 openjpeg=2.4.0=h3ad879b_0
 openssl=3.0.13=h7f8727e_0
 packaging=23.2=pyhd8ed1ab_0
+pandas=1.4.4=py38h6a678d5_0
 parso=0.8.3=pyhd8ed1ab_0
 pexpect=4.9.0=pyhd8ed1ab_0
 pickleshare=0.7.5=py_1003
@@ -103,18 +107,25 @@ psutil=5.9.0=py38h5eee18b_0
 ptyprocess=0.7.0=pyhd3deb0d_0
 pure_eval=0.2.2=pyhd8ed1ab_0
 pygments=2.17.2=pyhd8ed1ab_0
+pykwalify=1.8.0=pypi_0
 pyparsing=3.0.9=py38h06a4308_0
+pyradiomics=3.1.0=pypi_0
 python=3.8.18=h955ad1f_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
 python_abi=3.8=2_cp38
 pytorch=2.2.0=py3.8_cuda12.1_cudnn8.9.2_0
 pytorch-cuda=12.1=ha16c6d3_5
 pytorch-mutex=1.0=cuda
+pytz=2023.3.post1=py38h06a4308_0
+pywavelets=1.4.1=pypi_0
 pyyaml=6.0.1=py38h5eee18b_0
 pyzmq=25.1.2=py38h6a678d5_0
 readline=8.2=h5eee18b_0
 requests=2.31.0=py38h06a4308_1
+ruamel-yaml=0.18.6=pypi_0
+ruamel-yaml-clib=0.2.8=pypi_0
 setuptools=68.2.2=py38h06a4308_0
+simpleitk=2.3.1=pypi_0
 six=1.16.0=pyhd3eb1b0_1
 sqlite=3.41.2=h5eee18b_0
 stack_data=0.6.2=pyhd8ed1ab_0
