--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 seed: 42
 
-dirs:
-  seg_path:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_segmentations/'
-  img_path:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_images/'
-  csv_path:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_metadata'
+dir:
+  seg:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_segmentations/'
+  img:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_images/'
+  csv:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_metadata'
 
 dataset:
   split_fraction_train_rest: 0.75
