--- a/config.yml
+++ b/config.yml
@@ -4,17 +4,19 @@ dir:
   seg:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_segmentations/'
   img:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_images/'
   csv:   '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_metadata'
-  pkl:   '/media/dysk_a/jr_buler/HAM10000/my_pickle/radiomic_features.pkl'
+  pkl_train:   '/media/dysk_a/jr_buler/HAM10000/my_pickle/train_radiomic_features.pkl'
+  pkl_val:   '/media/dysk_a/jr_buler/HAM10000/my_pickle/val_radiomic_features.pkl'
+  pkl_test:   '/media/dysk_a/jr_buler/HAM10000/my_pickle/test_radiomic_features.pkl'
   inf:   '/media/dysk_a/jr_buler/HAM10000/my_pickle/info.txt'
 
 dataset:
   split_fraction_train_rest: 0.6
   split_fraction_val_test: 0.5
   train_sampling:
-    method: 'undersample' # oversample, undersample none
+    method: 'oversample' # oversample, undersample none
     multiplier: 1.0 # 0. to 1. value 1.0 means no change (applicable in undersampling scenario)
 
 radiomics:
   extract: True
+  save_or_load: 'none' # save, load, none
   mode: 'parallel' #serial, parallel
-  save_or_load: 'save' # save, load, none
