--- a/requirements.txt
+++ b/requirements.txt
@@ -3,147 +3,279 @@
 # platform: linux-64
 _libgcc_mutex=0.1=main
 _openmp_mutex=5.1=1_gnu
-asttokens=2.4.1=pyhd8ed1ab_0
-backcall=0.2.0=pyh9f0ad1d_0
-blas=1.0=mkl
+albumentations=1.3.1=pyhd8ed1ab_0
+alembic=1.8.1=py38h06a4308_0
+aom=3.6.0=h6a678d5_0
+asttokens=2.0.5=pyhd3eb1b0_0
+backcall=0.2.0=pyhd3eb1b0_0
+blas=1.1=openblas
+blosc=1.21.3=h6a678d5_0
 bottleneck=1.3.7=py38ha9d4c09_0
-bzip2=1.0.8=h7b6447c_0
-ca-certificates=2023.12.12=h06a4308_0
+brotli=1.0.9=h5eee18b_7
+brotli-bin=1.0.9=h5eee18b_7
+brotli-python=1.0.9=py38h6a678d5_7
+brunsli=0.1=h2531618_0
+bzip2=1.0.8=h5eee18b_5
+c-ares=1.19.1=h5eee18b_0
+ca-certificates=2024.3.11=h06a4308_0
+cairo=1.16.0=hb05425b_5
 certifi=2024.2.2=py38h06a4308_0
+cfitsio=3.470=h5893167_7
+charls=2.2.0=h2531618_0
 charset-normalizer=2.0.4=pyhd3eb1b0_0
-comm=0.2.1=pyhd8ed1ab_0
-cuda-cudart=12.1.105=0
-cuda-cupti=12.1.105=0
-cuda-libraries=12.1.0=0
-cuda-nvrtc=12.1.105=0
-cuda-nvtx=12.1.105=0
-cuda-opencl=12.3.101=0
-cuda-runtime=12.1.0=0
+click=8.1.7=py38h06a4308_0
+cloudpickle=2.2.1=py38h06a4308_0
+colorlog=5.0.1=py38h06a4308_1
+comm=0.2.1=py38h06a4308_0
+contourpy=1.0.5=py38hdb19cb5_0
+cuda-cudart=11.8.89=0
+cuda-cupti=11.8.87=0
+cuda-libraries=11.8.0=0
+cuda-nvrtc=11.8.89=0
+cuda-nvtx=11.8.86=0
+cuda-runtime=11.8.0=0
+cudatoolkit=11.8.0=h6a678d5_0
+cudnn=8.9.2.26=cuda11_0
 cycler=0.11.0=pyhd3eb1b0_0
+cyrus-sasl=2.1.28=h52b45da_1
+cytoolz=0.12.2=py38h5eee18b_0
+dask-core=2023.4.1=py38h06a4308_0
+dav1d=1.2.1=h5eee18b_0
+dbus=1.13.18=hb2f20db_0
 debugpy=1.6.7=py38h6a678d5_0
-decorator=5.1.1=pyhd8ed1ab_0
+decorator=5.1.1=pyhd3eb1b0_0
 docopt=0.6.2=pypi_0
-executing=2.0.1=pyhd8ed1ab_0
-ffmpeg=4.3=hf484d3e_0
-filelock=3.13.1=py38h06a4308_0
+eigen=3.4.0=hdb19cb5_0
+executing=0.8.3=pyhd3eb1b0_0
+expat=2.5.0=h6a678d5_0
+ffmpeg=4.2.3=h167e202_0
+fftw=3.3.9=h27cfd23_1
+filelock=3.9.0=pypi_0
+fontconfig=2.14.1=h4c34cd2_2
+fonttools=4.25.0=pyhd3eb1b0_0
 freetype=2.12.1=h4a9f257_0
+fsspec=2023.10.0=py38h06a4308_0
+giflib=5.2.1=h5eee18b_3
+glib=2.78.4=h6a678d5_0
+glib-tools=2.78.4=h6a678d5_0
 gmp=6.2.1=h295c915_3
-gmpy2=2.1.2=py38heeb90bb_0
 gnutls=3.6.15=he1e5248_0
-icu=67.1=he1b5a44_0
+graphite2=1.3.14=h295c915_1
+greenlet=3.0.1=py38h6a678d5_0
+gst-plugins-base=1.14.1=h6a678d5_1
+gstreamer=1.14.1=h5eee18b_1
+harfbuzz=4.3.0=hf52aaf7_1
+hdf5=1.12.1=h2b7332f_3
+icu=58.2=he6710b0_3
 idna=3.4=py38h06a4308_0
-importlib-metadata=7.0.1=pyha770c72_0
-importlib_metadata=7.0.1=hd8ed1ab_0
-intel-openmp=2023.1.0=hdb19cb5_46306
-ipykernel=6.29.2=pyhd33586a_0
-ipython=8.12.0=pyh41d4057_0
-jedi=0.19.1=pyhd8ed1ab_0
-jinja2=3.1.3=py38h06a4308_0
+imagecodecs=2023.1.23=py38hc4b7b5f_0
+imageio=2.33.1=py38h06a4308_0
+importlib-metadata=7.0.1=py38h06a4308_0
+importlib_metadata=7.0.1=hd3eb1b0_0
+importlib_resources=6.1.1=py38h06a4308_1
+intel-openmp=2022.1.0=h9e868ea_3769
+ipykernel=6.28.0=py38h06a4308_0
+ipython=8.12.2=py38h06a4308_0
+jedi=0.18.1=py38h06a4308_1
+jinja2=3.1.2=pypi_0
+joblib=1.3.2=pyhd8ed1ab_0
 jpeg=9e=h5eee18b_1
-jupyter_client=8.6.0=pyhd8ed1ab_0
-jupyter_core=5.7.1=py38h578d9bd_0
+jupyter_client=8.6.0=py38h06a4308_0
+jupyter_core=5.5.0=py38h06a4308_0
+jxrlib=1.1=h7b6447c_2
 kiwisolver=1.4.4=py38h6a678d5_0
+krb5=1.20.1=h143b758_1
 lame=3.100=h7b6447c_0
+lazy_loader=0.3=py38h06a4308_0
 lcms2=2.12=h3be6417_0
 ld_impl_linux-64=2.38=h1181459_1
 lerc=3.0=h295c915_0
-libcublas=12.1.0.26=0
-libcufft=11.0.2.4=0
-libcufile=1.8.1.2=0
-libcurand=10.3.4.107=0
-libcusolver=11.4.4.55=0
-libcusparse=12.0.2.55=0
+libaec=1.0.4=he6710b0_1
+libavif=0.11.1=h5eee18b_0
+libblas=3.9.0=16_linux64_openblas
+libbrotlicommon=1.0.9=h5eee18b_7
+libbrotlidec=1.0.9=h5eee18b_7
+libbrotlienc=1.0.9=h5eee18b_7
+libcblas=3.9.0=16_linux64_openblas
+libclang=14.0.6=default_hc6dbbc7_1
+libclang13=14.0.6=default_he11475f_1
+libcublas=11.11.3.6=0
+libcufft=10.9.0.58=0
+libcufile=1.9.0.20=0
+libcups=2.4.2=h2d74bed_1
+libcurand=10.3.5.119=0
+libcurl=8.5.0=h251f7ec_0
+libcusolver=11.4.1.48=0
+libcusparse=11.7.5.86=0
 libdeflate=1.17=h5eee18b_1
+libedit=3.1.20230828=h5eee18b_0
+libev=4.33=h7f8727e_1
+libevent=2.1.12=hdbd6064_1
 libffi=3.4.4=h6a678d5_0
 libgcc-ng=11.2.0=h1234567_1
+libgfortran=3.0.0=1
+libgfortran-ng=11.2.0=h00389a5_1
+libgfortran5=11.2.0=h1234567_1
+libglib=2.78.4=hdc74915_0
 libgomp=11.2.0=h1234567_1
 libiconv=1.16=h7f8727e_2
 libidn2=2.3.4=h5eee18b_0
-libjpeg-turbo=2.0.0=h9bf148f_0
-libnpp=12.0.2.50=0
-libnvjitlink=12.1.105=0
-libnvjpeg=12.1.1.14=0
+liblapack=3.9.0=16_linux64_openblas
+libllvm14=14.0.6=hdb19cb5_3
+libnghttp2=1.57.0=h2d74bed_0
+libnpp=11.8.0.86=0
+libnvjpeg=11.9.0.86=0
+libopenblas=0.3.21=h043d6bf_0
 libpng=1.6.39=h5eee18b_0
-libsodium=1.0.18=h36c2ea0_1
+libpq=12.17=hdbd6064_0
+libprotobuf=3.20.3=he621ea3_0
+libsodium=1.0.18=h7b6447c_0
+libssh2=1.10.0=hdbd6064_2
 libstdcxx-ng=11.2.0=h1234567_1
 libtasn1=4.19.0=h5eee18b_0
 libtiff=4.5.1=h6a678d5_0
 libunistring=0.9.10=h27cfd23_0
+libuuid=1.41.5=h5eee18b_0
+libwebp=1.3.2=h11a3e52_0
 libwebp-base=1.3.2=h5eee18b_0
+libxcb=1.15=h7f8727e_0
+libxkbcommon=1.0.1=h5eee18b_1
+libxml2=2.10.4=hcbfbd50_0
+libxslt=1.1.37=h2085143_0
+libzopfli=1.0.3=he6710b0_0
 llvm-openmp=14.0.6=h9e868ea_0
+locket=1.0.0=py38h06a4308_0
 lz4-c=1.9.4=h6a678d5_0
+magma=2.5.4=h6103c52_2
+mako=1.2.3=py38h06a4308_0
 markupsafe=2.1.3=py38h5eee18b_0
-matplotlib=3.2.2=1
-matplotlib-base=3.2.2=py38h5d868c9_1
-matplotlib-inline=0.1.6=pyhd8ed1ab_0
-mkl=2023.1.0=h213fc3f_46344
-mkl-service=2.4.0=py38h5eee18b_1
-mkl_fft=1.3.8=py38h5eee18b_0
-mkl_random=1.2.4=py38hdb19cb5_0
-mpc=1.1.0=h10f8cd9_1
-mpfr=4.0.2=hb69a4c5_1
-mpmath=1.3.0=py38h06a4308_0
+matplotlib=3.7.2=py38h06a4308_0
+matplotlib-base=3.7.2=py38h1128e8f_0
+matplotlib-inline=0.1.6=py38h06a4308_0
+mkl=2022.1.0=hc2b9512_224
+mkl-service=2.4.0=py38ha7038f1_0
+mkl_fft=1.3.1=py38h887cb03_3
+mkl_random=1.2.2=py38h5ca245f_1
+mpmath=1.3.0=pypi_0
+munkres=1.1.4=py_0
+mysql=5.7.24=h721c034_2
+nccl=2.12.12.1=h0800d71_0
 ncurses=6.4=h6a678d5_0
-nest-asyncio=1.6.0=pyhd8ed1ab_0
+nest-asyncio=1.6.0=py38h06a4308_0
 nettle=3.7.3=hbbd107a_1
 networkx=3.1=py38h06a4308_0
-numexpr=2.8.4=py38hc78ab66_1
-numpy=1.24.3=py38hf6e8229_1
-numpy-base=1.24.3=py38h060ed82_1
+nomkl=3.0=0
+nspr=4.35=h6a678d5_0
+nss=3.89.1=h6a678d5_0
+numexpr=2.8.4=py38hd2a5715_1
+numpy=1.24.3=py38hf838250_0
+numpy-base=1.24.3=py38h1e6e340_0
+nvidia-cublas-cu11=11.11.3.6=pypi_0
+nvidia-cublas-cu12=12.1.3.1=pypi_0
+nvidia-cuda-cupti-cu11=11.8.87=pypi_0
+nvidia-cuda-cupti-cu12=12.1.105=pypi_0
+nvidia-cuda-nvrtc-cu11=11.8.89=pypi_0
+nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
+nvidia-cuda-runtime-cu11=11.8.89=pypi_0
+nvidia-cuda-runtime-cu12=12.1.105=pypi_0
+nvidia-cudnn-cu11=8.7.0.84=pypi_0
+nvidia-cudnn-cu12=8.9.2.26=pypi_0
+nvidia-cufft-cu11=10.9.0.58=pypi_0
+nvidia-cufft-cu12=11.0.2.54=pypi_0
+nvidia-curand-cu11=10.3.0.86=pypi_0
+nvidia-curand-cu12=10.3.2.106=pypi_0
+nvidia-cusolver-cu11=11.4.1.48=pypi_0
+nvidia-cusolver-cu12=11.4.5.107=pypi_0
+nvidia-cusparse-cu11=11.7.5.86=pypi_0
+nvidia-cusparse-cu12=12.1.0.106=pypi_0
+nvidia-nccl-cu11=2.19.3=pypi_0
+nvidia-nccl-cu12=2.19.3=pypi_0
+nvidia-nvjitlink-cu12=12.4.99=pypi_0
+nvidia-nvtx-cu11=11.8.86=pypi_0
+nvidia-nvtx-cu12=12.1.105=pypi_0
+openblas=0.3.4=ha44fe06_0
+opencv=4.6.0=py38ha16400d_5
 openh264=2.1.1=h4ff587b_0
 openjpeg=2.4.0=h3ad879b_0
 openssl=3.0.13=h7f8727e_0
-packaging=23.2=pyhd8ed1ab_0
-pandas=1.4.4=py38h6a678d5_0
-parso=0.8.3=pyhd8ed1ab_0
-pexpect=4.9.0=pyhd8ed1ab_0
-pickleshare=0.7.5=py_1003
+optuna=3.5.0=pyhd8ed1ab_0
+packaging=23.1=py38h06a4308_0
+pandas=2.0.3=py38h1128e8f_0
+parso=0.8.3=pyhd3eb1b0_0
+partd=1.4.1=py38h06a4308_0
+pcre2=10.42=hebb0a14_0
+pexpect=4.8.0=pyhd3eb1b0_3
+pickleshare=0.7.5=pyhd3eb1b0_1003
 pillow=10.2.0=py38h5eee18b_0
 pip=23.3.1=py38h06a4308_0
-platformdirs=4.2.0=pyhd8ed1ab_0
-prompt-toolkit=3.0.42=pyha770c72_0
-prompt_toolkit=3.0.42=hd8ed1ab_0
+pixman=0.40.0=h7f8727e_1
+platformdirs=3.10.0=py38h06a4308_0
+ply=3.11=py38_0
+pooch=1.7.0=py38h06a4308_0
+prompt-toolkit=3.0.43=py38h06a4308_0
 psutil=5.9.0=py38h5eee18b_0
-ptyprocess=0.7.0=pyhd3deb0d_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-pygments=2.17.2=pyhd8ed1ab_0
+ptyprocess=0.7.0=pyhd3eb1b0_2
+pure_eval=0.2.2=pyhd3eb1b0_0
+pygments=2.15.1=py38h06a4308_1
 pykwalify=1.8.0=pypi_0
 pyparsing=3.0.9=py38h06a4308_0
+pyqt=5.15.10=py38h6a678d5_0
+pyqt5-sip=12.13.0=py38h5eee18b_0
 pyradiomics=3.1.0=pypi_0
-python=3.8.18=h955ad1f_0
+pysocks=1.7.1=py38h06a4308_0
+python=3.8.12=hf930737_1_cpython
 python-dateutil=2.8.2=pyhd3eb1b0_0
-python_abi=3.8=2_cp38
-pytorch=2.2.0=py3.8_cuda12.1_cudnn8.9.2_0
-pytorch-cuda=12.1=ha16c6d3_5
-pytorch-mutex=1.0=cuda
+python-tzdata=2023.3=pyhd3eb1b0_0
+python_abi=3.8=4_cp38
+pytorch-cuda=11.8=h7e8668a_5
+pytorch-tabnet=4.1.0=pypi_0
 pytz=2023.3.post1=py38h06a4308_0
-pywavelets=1.4.1=pypi_0
+pywavelets=1.4.1=py38h5eee18b_0
 pyyaml=6.0.1=py38h5eee18b_0
 pyzmq=25.1.2=py38h6a678d5_0
+qt-main=5.15.2=h7358343_9
+qt-webengine=5.15.9=h9ab4d14_7
+qtwebkit=5.212=h3fafdc1_5
+qudida=0.0.4=pyhd8ed1ab_0
 readline=8.2=h5eee18b_0
 requests=2.31.0=py38h06a4308_1
 ruamel-yaml=0.18.6=pypi_0
 ruamel-yaml-clib=0.2.8=pypi_0
+scikit-image=0.20.0=py38h6a678d5_0
+scikit-learn=1.3.0=py38h1128e8f_1
+scipy=1.9.1=py38h32ae08f_0
 setuptools=68.2.2=py38h06a4308_0
 simpleitk=2.3.1=pypi_0
+sip=6.7.12=py38h6a678d5_0
 six=1.16.0=pyhd3eb1b0_1
+sleef=3.5.1=h5eee18b_2
+snappy=1.1.10=h6a678d5_1
+sqlalchemy=2.0.25=py38h5eee18b_0
 sqlite=3.41.2=h5eee18b_0
-stack_data=0.6.2=pyhd8ed1ab_0
-sympy=1.12=py38h06a4308_0
+stack_data=0.2.0=pyhd3eb1b0_0
+sympy=1.12=pypi_0
 tbb=2021.8.0=hdb19cb5_0
+threadpoolctl=3.3.0=pyhc1e730c_0
+tifffile=2023.4.12=py38h06a4308_0
 tk=8.6.12=h1ccaba5_0
-torchaudio=2.2.0=py38_cu121
-torchtriton=2.2.0=py38
-torchvision=0.17.0=py38_cu121
+tomli=2.0.1=py38h06a4308_0
+toolz=0.12.0=py38h06a4308_0
+torch=2.2.0=pypi_0
+torchvision=0.17.0=pypi_0
 tornado=6.3.3=py38h5eee18b_0
-traitlets=5.14.1=pyhd8ed1ab_0
+tqdm=4.65.0=py38hb070fc8_0
+traitlets=5.7.1=py38h06a4308_0
+triton=2.2.0=pypi_0
+typing-extensions=4.9.0=py38h06a4308_1
 typing_extensions=4.9.0=py38h06a4308_1
-urllib3=2.1.0=py38h06a4308_0
-wcwidth=0.2.13=pyhd8ed1ab_0
+urllib3=2.1.0=py38h06a4308_1
+wcwidth=0.2.5=pyhd3eb1b0_0
 wheel=0.41.2=py38h06a4308_0
-xz=5.4.5=h5eee18b_0
+x264=1!152.20180806=h7b6447c_0
+xz=5.4.6=h5eee18b_0
 yaml=0.2.5=h7b6447c_0
 zeromq=4.3.5=h6a678d5_0
-zipp=3.17.0=pyhd8ed1ab_0
+zfp=1.0.0=h6a678d5_0
+zipp=3.17.0=py38h06a4308_0
 zlib=1.2.13=h5eee18b_0
 zstd=1.5.5=hc292b87_0
