--- a/params.yml
+++ b/params.yml
@@ -92,8 +92,8 @@ setting: #----------------------------------------------------------------------
  
   label: 255                #[1]: Integer, label value of Region of Interest (ROI) in labelmap.
 
-# Image discretization
-  binWidth: 25            # [25]: Float, > 0, size of the bins when making a histogram and for discretization of the image gray level.
+# Image discretization https://discourse.slicer.org/t/binwidth-optimization/15996/2
+  binWidth: 4            # [25]: Float, > 0, size of the bins when making a histogram and for discretization of the image gray level.
   # binCount:               # [None]: integer, > 0, specifies the number of bins to create. The width of the bin is then determined by the range in the ROI. No definitive evidence is available on which method of discretization is superior, we advise a fixed bin width.
 
 # Forced 2D extraction
