--- a/config.yml
+++ b/config.yml
@@ -13,21 +13,25 @@ dir:
 dataset:
   split_fraction_train_rest: 0.7
   split_fraction_val_test: 0.5
+  img_size: 224 #384
+  k_folds: 10
   train_sampling:
     method: 'none' # oversample, undersample none
     multiplier: 1.0 # 0. to 1. value 1.0 means no change (applicable in undersampling scenario)
 
 radiomics:
-  extract: True # True, False, if False load from pkl
+  extract: False # True, False, if False load from pkl
   mode: 'parallel' #serial, parallel
-  save: True # True, False
+  save: False # True, False
 
 net_train:
-  optimizer: 'adam' # adam, sgd
+  # TODO
+  optimizer: 'sgd' # adam, sgd
   criterion: 'ce' # bce, ce
   scheduler: 'linear' # linear, step, plateau
+  #
   epochs: 1000
-  patience: 20
-  batch_size: 256
-  lr: 0.0001
-  wd: 0.1
+  patience: 50
+  batch_size: 24
+  lr: 0.001
+  wd: 0.001
