--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,19 @@
+neptune: True
+
 seed: 42
 device: 'cuda:0'
 
 dir:
-  seg:         '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_segmentations/'
-  img:         '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_images_no_hair/'
-  seg_test:    '/media/dysk_a/jr_buler/HAM10000/test/ISIC2018_Task3_Test_Images_Segmentations_trained_on_HAM_no_hair/'  
-  img_test:    '/media/dysk_a/jr_buler/HAM10000/test/ISIC2018_Task3_Test_Images_resized_no_hair/'
+  seg:         '/media/dysk_a/jr_buler/HAM10000/train/new/HAM10000_segmentations/'
+
+  img:         '/media/dysk_a/jr_buler/HAM10000/train/new/HAM10000_images/'
+  seg_test:    '/media/dysk_a/jr_buler/HAM10000/test/new/ISIC2018_Task3_Test_Images_Segmentations_trained_on_HAM/'  
+  img_test:    '/media/dysk_a/jr_buler/HAM10000/test/new/ISIC2018_Task3_Test_Images/'
+  
+  # img:         '/media/dysk_a/jr_buler/HAM10000/train/new/HAM10000_images_no_hair/'
+  # seg_test:    '/media/dysk_a/jr_buler/HAM10000/test/new/ISIC2018_Task3_Test_Images_Segmentations_trained_on_HAM_no_hair/'  
+  # img_test:    '/media/dysk_a/jr_buler/HAM10000/test/new/ISIC2018_Task3_Test_Images_no_hair/'
+  
   csv:         '/media/dysk_a/jr_buler/HAM10000/train/HAM10000_metadata'
   csv_test:    '/media/dysk_a/jr_buler/HAM10000/test/ISIC2018_Task3_Test_GroundTruth.csv'
   pkl_train:   '/media/dysk_a/jr_buler/HAM10000/my_pickle/train_radiomic_features.pkl'
@@ -25,11 +33,11 @@ dataset:
     multiplier: 1.0 # 0. to 1. value 1.0 means no change (applicable in undersampling scenario)
 
 radiomics:
-  extract: False # True, False, if False load from pkl
-  mode: 'parallel' #serial, parallel
+  extract: True # True, False, if False load from pkl
+  mode: 'serial' #serial, parallel
   gray: True # True, False
   rgb: True # True, False
-  save: False # True, False
+  save: True # True, False
 
 net_train:
   backbone: 'efficientnet_b0' # resnet34, efficientnet_b0
@@ -38,7 +46,7 @@ net_train:
   scheduler: 'linear' # linear, step, plateau
   #
   epochs: 1000
-  patience: 30
+  patience: 50
   batch_size: 32
   num_workers: 5
   lr: 0.001
